task: add project to gh-pages

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "mobile_test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Alejandroid17.github.io/mobile_test/",
+  "homepage": "https://Alejandroid17.github.io/mobiletest/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^1.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
